docs: update swagger yaml
