# src/routes/index.ts
@@ -6,6 +6,7 @@ import BotMessageRouter from './BotMessagesRoutes'
 import RoleRoutes from './RoleRoutes'
 import UserRoutes from './UserRoutes'
 import AuthRoutes from './AuthRoutes'
+import MemberRoutes from './MemberRoutes'
 
 const routes = Router();
  
@@ -16,4 +17,5 @@ routes.use('/bot-messages',BotMessageRouter)
 routes.use('/roles',RoleRoutes) 
 routes.use('/users',UserRoutes) 
 routes.use('/auth',AuthRoutes) 
+routes.use('/members',MemberRoutes)
 export default routes;
