# swagger.yaml
@@ -101,7 +101,47 @@ paths:
                 items:
                   $ref: '#/components/schemas/Media'
   
+  /members:
+    get:
+      tags:
+        - Members
+      summary: Members
+      responses:
+        '401':
+          $ref: '#/components/responses/UnauthorizedError'
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Member'
 
+  /members/{id}:
+    get:
+      tags:
+        - Members
+      summary: Get Member by ID
+      parameters:
+        - name: id
+          in: path
+          description: Member ID
+          required: true
+          schema:
+            type: integer
+      responses:
+        '401':
+          $ref: '#/components/responses/UnauthorizedError'
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Media'
+  
       
   /bot_messages:
     post:
@@ -484,7 +524,7 @@ paths:
                     type: integer
                     format: int64
                     example: 1
-                  email:
+                  username:
                     type: string
                     example: john.doe@example.com
                   role:
@@ -505,7 +545,7 @@ paths:
                     example: 400
                   message:
                     type: string
-                    example: 'Email is exist'
+                    example: 'username is exist'
                   error:
                     type: string
                     example: Bad Request
@@ -602,7 +642,7 @@ paths:
                     example: 400
                   message:
                     type: string
-                    example: 'Email is exist'
+                    example: 'username is exist'
                   error:
                     type: string
                     example: Bad Request
@@ -677,8 +717,47 @@ paths:
               schema:
                 type: object
                 properties:
-                  accessToken:
-                    type: string
+                  success:
+                    type: boolean
+                  status:
+                    type: integer
+                  data:
+                    type: object
+                    properties:
+                      token:
+                        type: string
+                      user:
+                        type: object
+                        properties:
+                          id:
+                            type: integer
+                          username:
+                            type: string
+                          name:
+                            type: string
+                          password:
+                            type: string
+                          role_id:
+                            type: integer
+                          created_at:
+                            type: string
+                            format: date-time
+                          updated_at:
+                            type: string
+                            format: date-time
+                          role:
+                            type: object
+                            properties:
+                              id:
+                                type: integer
+                              role_name:
+                                type: string
+                              created_at:
+                                type: string
+                                format: date-time
+                              updated_at:
+                                type: string
+                                format: date-time
         '400':
           $ref: '#/components/responses/BadRequestError'
         '401':
@@ -760,54 +839,9 @@ components:
           format: date-time
           example: '2023-05-01T12:34:56Z'
 
-    CreateOrganizationDto:
-      type: object
-      properties:
-        organizationName:
-          type: string
-          example: "organization"
-        location:
-          type: string
-          example: "location"
-
-    UpdateOrganizationDto:
-      type: object
-      properties:
-        organizationName:
-          type: string
-          example: "organization"
-          
-        location:
-          type: string
-          example: "location"
-        
-
-    Organization:
-      type: object
-      properties:
-        id:
-          type: integer
-          format: int64
-          example: 10
-        organizationName:
-          type: string
-          example: Organization Name
-        location:
-          type: string
-          example: location
-        created_at:
-          type: string
-          format: date-time
-          example: '2023-05-01T12:34:56Z'
-        updated_at:
-          type: string
-          format: date-time
-          example: '2023-05-01T12:34:56Z'
-        Bot Messages:
-          type: array
-          items:
-            $ref: '#/components/schemas/BotMessage'
     
+    
+  
     CreateUserDto:
       type: object
       properties:
@@ -904,6 +938,8 @@ components:
     ChangePasswordDto:
       type: object
       properties:
+        id:
+          type: integer
         oldPassword:
           type: string
         newPassword:
@@ -914,7 +950,7 @@ components:
     SignInCrdentialsDto:
       type: object
       properties:
-        email:
+        username:
           type: string
           minLength: 4
           maxLength: 20
@@ -922,7 +958,7 @@ components:
           type: string
           maxLength: 20
       required:
-        - email
+        - username
         - password
         
     Event:
@@ -944,6 +980,9 @@ components:
           type: array
           items:
             $ref: '#/components/schemas/Media'
+        member:
+          $ref: '#/components/schemas/Member'
+            
         createdAt:
           type: string
           format: date-time
@@ -961,6 +1000,27 @@ components:
       
         eventId:
           type: number
+        createdAt:
+          type: string
+          format: date-time
+        updatedAt:
+          type: string
+          format: date-time
+    
+    Member:
+      type: object
+      properties:
+        id:
+          type: number
+        full_name:
+          type: string
+          maxLength: 255
+      
+        userBotId:
+          type: number
+        lastUsed:
+          type: string
+          format: date-time
         createdAt:
           type: string
           format: date-time
